--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "frontend_react_movies",
+  "name": "api_movie",
   "version": "1.0.0",
-  "description": "Primer Proyecto con React",
-  "main": "index.js",
+  "description": "En este tercer reto técnico hemos de realizar un buscador de películas.",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BMHA1/Frontend_React_Movies.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BMHA1/Frontend_React_Movies/issues"
-  },
-  "homepage": "https://github.com/BMHA1/Frontend_React_Movies#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
