--- a/Frontend_React_Movies/Frontend-Moviearts/package.json
+++ b/Frontend_React_Movies/Frontend-Moviearts/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
