--- a/Frontend_React_Movies/Frontend-Moviearts/package.json
+++ b/Frontend_React_Movies/Frontend-Moviearts/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.2.1",
     "start": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
